--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "noImplicitAny": false,
     "noEmitOnError": true,
+    "module": "esnext",
     "removeComments": true,
     "sourceMap": true,
     "target": "es2020",
