--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@microsoft/signalr": "^5.0.0",
     "@types/jquery": "^3.5.4",
     "@types/jqueryui": "^1.12.13",
     "@types/marked": "^1.1.0",
+    "@types/node": "^14.14.7",
     "@types/sizzle": "^2.3.2"
   },
   "devDependencies": {},
