--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "noImplicitAny": false,
+    "moduleResolution": "node",
     "noEmitOnError": true,
     "module": "esnext",
     "removeComments": true,
