--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@types/jquery": "^3.5.4",
     "@types/jqueryui": "^1.12.13",
     "@types/marked": "^1.1.0",
-    "@types/sizzle": "^2.3.2"
+    "@types/node": "^14.14.7",
+    "@types/sizzle": "^2.3.2",
+    "readmore-js": "^3.0.0-beta-1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/readmore-js": "^3.0.0",
+    "i": "^0.3.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
