Fix db -1 in sendRequest

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ wwwroot/js/Administrator
 wwwroot/js/Chapter
 wwwroot/js/Composition
 wwwroot/js/Home
+wwwroot/js/Shared
 wwwroot/js/Models
 wwwroot/js/*.js
 wwwroot/js/*.js.map
